# LocalChat

./: .dockerignore  .gitignore  BENCHMARK.md  Dockerfile  LICENSE  README.md  README_ZH.md  adapter-environment.yml  app.py  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
adapter/: QUICKSTART.md  config.py  main.py  masking_strategies.py  models.py  multi_entity_presidio_demo.py  multi_mask_demo.py  pii_engine.py  presidio_demo.py  smart_mode.py  test_generators.py  test_pii_engine.py  test_proxy_integration.py  text_chunking.py
adapter/data/: DATA_GENERATION.md  IMPLEMENTATION_SUMMARY.md  README.md  dateset_generator.py  filter_templates.py  hf_upload.py  templates.txt
adapter/demos/: __init__.py  e2e_mask_unmask_demo.py
adapter/examples/: generate_dataset_example.py
adapter/masking_strategy/: masking_strategy.py
adapter/privacy_extractor/: privacy_extractor.py
adapter/scripts/: run_server.sh  setup_env.sh  test_api.sh
adapter/tests/: all-in-one-api.py  anonymized.jsonl  cases.md  (+15 more)
localchat/: __main__.py  app.py  embedding.py  embedding_with_ollama.py  files.py  langchain_chat.py  langchain_retrival.py  manager.py  models.py  monitor.py  query.py  rag.py  retrive.py  vectordb.py  vectormanager.py
localchat_langchain/: __main__.py  api.py  chunk_manager.py  document_manager.py  embedding.py  embedding_with_ollama.py  file_manager.py  langchain_chat.py  langchain_retrival.py  manager.py  model_manager.py  models.py  monitor.py  op.py  requirement_langchain.txt  retrive.py  session_manager.py  settings.py  text_extract.py  zotero.py
(+67 files in other folders)
