[tool.poetry]
name = "localchat"
version = "0.1.0"
description = "A personal LLM-driven chat application for engaging with local documents."
authors = ["Bo <boironic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.50.0"
gradio = "^4.44.0"
psutil = "6.0.0"
socksio = "^1.0.0"
httpx = {extras = ["socks"], version = "^0.27.2"}
sqlalchemy = "^2.0.35"
llama-index = "0.9.42.post2"
pypdf = "5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
